added token to cookies-storage
